# pyrel

./: README.md  main.py  pyproject.toml
pyrel/: main.py  relations.py
tests/: properties_test.py
