[tool.poetry]
name = "pyrel"
version = "0.1.0"
description = ""
authors = ["Misael Valentin <misael.vf2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"
black = "^22.12.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
